--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,12 @@ html {
   padding-bottom: 2%;
 }
 
+.heading-flex{
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+
 #container1 {
   display: flex;
   justify-content: center;
@@ -71,7 +77,7 @@ html {
   padding-bottom: 4%;
 }
 
-#heading-column1 {
+.heading-column1 {
   text-align: right;
   font-size: 25px;
   opacity: 0;
@@ -80,7 +86,7 @@ html {
   font-weight: lighter;
 }
 
-#heading-column2 {
+.heading-column2 {
   text-align: left;
   font-size: 25px;
   opacity: 0;
@@ -111,14 +117,9 @@ html {
   align-items: center;
 }
 
-.navbar-dimmer {
-  background-color: rgba(99, 72, 6, 0.8);
-  height: 4%;
-}
-
-.navbar-font {
-  color: rgb(255, 255, 255);
-  padding-top: 0.5%;
+.container2-dimmer {
+  background-color: rgb(0, 0, 0, 0.5);
+  color: white;
 }
 
 /* Navbar visibility while scrolling */
@@ -128,7 +129,6 @@ html {
   width: 100%;
   padding: 10px;
   transition-duration: 0.5s;
-  z-index: 999999;
 }
 
 .nav-bar.visible {
@@ -138,12 +138,19 @@ html {
 .menu-grid {
   display: flex;
   justify-content: center;
-  gap: 3%;
-  font-size: 13px;
+  gap: 15px;
+  font-size: 15px;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   list-style-type: none;
-  padding-bottom: 2%;
+  padding-bottom: 4%;
   z-index: 10;
+  font-weight: bold;
+}
+
+.nav-bar {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 .nav-bar li {
@@ -152,9 +159,9 @@ html {
 
 .nav-bar a {
   text-decoration: none;
+  color: darkgoldenrod;
   padding-left: 10px;
   padding-right: 10px;
-  color: darkgoldenrod;
 }
 
 /* Hover animation */
@@ -402,22 +409,24 @@ html {
   font-size: 20px;
   font-family: silenter;
   font-weight: bolder;
+  margin-top: 15px;
 }
 
 .information-text2 {
-  font-size: 10px;
+  font-size: 12px;
   font-family: sans-serif;
   margin-top: 2%;
   margin-bottom: 2%;
   text-align: center;
   font-weight: bolder;
+  margin-bottom: 5px;
 }
 
 .bank-details {
-  text-align: left;
   margin-bottom: 10%;
   font-weight: bolder;
-  font-size: 10px;
+  font-size: 12px;
+  text-align: center;
 }
 
 .guesthouses {
